added a button and cards.js will find something in the db but not when the button is clicked

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <nav>
             <a href="/cards.html" target="_blank">Cards</a>
             <a href="/decks.html" target="_blank">Decks</a>
-            <button onclick="go()">go</button>
+            <input id="searchBox" type="text" placeholder="Search for a card...">
+            <button onclick="findCard()">Search</button>
         </nav>  
     </body>
 </html>
